# TaskTracker

./: Controller.cpp  Controller.h  FakeDB.cpp  FakeDB.h  Helper.cpp  Helper.h  Task Tracker.sln  Task Tracker.vcxproj  Task Tracker.vcxproj.filters  Task.cpp  Task.h  Task.json  TaskManager.cpp  TaskManager.h  User.cpp  User.h  User.json  UserManager.cpp  UserManager.h  main.cpp  vcpkg.json
TaskTracker/: CMakeLists.txt  main.cpp  mainwindow.ui
UI/: CMakeLists.txt  main.cpp
